--- a/arkki_homepage/src/Header/Header.css
+++ b/arkki_homepage/src/Header/Header.css
@@ -52,7 +52,7 @@
   display: flex;
   justify-content: flex-end;
   margin: 1px auto;
-  margin-right: 80px;
+  margin-right: 40px;
   width: 100%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -88,8 +88,8 @@
 /* Dropdown */
 .submenu {
   position: absolute;
-  width: 200px;
-  left: 50%; margin-left: -100px;
+  width: 115%;
+  left: 40%; margin-left: -100px;
   transform: skewX(-25deg);
   transform-origin: left top;
 }
