--- a/arkki_homepage/src/index.css
+++ b/arkki_homepage/src/index.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
