--- a/arkki_homepage/src/components/SquadBuilder/Formation/Formation.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/Formation/Formation.style.scss
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Righteous&family=Teko:wght@300..700&display=swap');
+
+.righteous-regular {
+    font-family: "Righteous", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 .Formation__line {
     display: flex;
     flex-direction: row;
@@ -12,7 +20,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid #5f0c9e;
+    background-image: url(../../../assets/card.png);
+    background-size: cover;
     border-radius: 0.25em;
     margin: 0;
     height: 160px;
@@ -44,11 +53,138 @@
     }
 }
 
+.player .lastName{
+    position: relative;
+    top: 55px;
+    font-size: 12px;
+    font-weight: 700;
+    left: 2px;
+    color: #965300;
+}
+
+.player .playerImg {
+    position: absolute;
+    filter: grayscale(100%);
+    width: 80px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: -20px;
+}
+
+.player .firstName {    
+    position: relative;
+    align-self: flex-start;
+    top: 38px;
+    left: 59px;
+    font-size: 8px;
+    font-weight: 700;
+    color: #965300;
+}
+
+.player .playerNumber {
+    align-self: flex-end;
+    font-family: 'Righteous', sans-serif;
+    margin-right: 18px;
+    margin-top: -34px;
+
+    font-size: 21px;
+    font-weight: 700;
+    color: #965300;
+}
+
+@media (max-width: 768px) {
+    .player .lastName {
+        top: 45px;
+        font-size: 9px;
+        font-weight: 700;
+    }
+
+    .player .firstName {
+        top: 32px;
+        left: 48px;
+        font-size: 8px;
+        font-weight: 700;
+    }
+
+    .player .playerNumber {
+        margin-right: 14px;
+        margin-top: -34px;
+        font-size: 19px;
+    }
+
+    .player .playerImg {
+        width: 62px;
+        height: 80px;
+        border-radius: 200%;
+        margin-top: -15px;
+    }
+    
+}
+
+@media (max-width: 560px) {
+    .player .lastName {
+        top: 37px;
+        font-size: 8px;
+        font-weight: 700;
+    }
+
+    .player .firstName {
+        top: 24px;
+        left: 41px;
+        font-size: 7px;
+        font-weight: 700;
+    }
+
+    .player .playerNumber {
+        margin-right: 9px;
+        margin-top: -30px;
+        font-size: 17px;
+    }
+
+    .player .playerImg {
+        width: 45px;
+        height: 60px;
+        border-radius: 200%;
+        margin-top: -20px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .player .lastName {
+        top: 65px;
+        font-size: 13px;
+        font-weight: 700;
+    }
+
+    .player .firstName {
+        top: 49px;
+        left: 67px;
+        font-size: 10px;
+        font-weight: 700;
+    }
+
+    .player .playerNumber {
+        margin-right: 20px;
+        margin-top: -38px;
+        font-size: 26px;
+    }
+
+    .player .playerImg {
+        width: 90px;
+        height: 110px;
+        border-radius: 200%;
+        margin-top: -20px;
+    }
+}
+
+
+
 .Formation__line--vertical {
     display: flex;
     flex-direction: column; /* Change to column for vertical layout */
     justify-content: flex-start; /* Align items to the start */
     align-items: center;
+    justify-content: space-evenly;
     margin: 0rem 0; /* Adjust margins as needed */
     width: 100%;
 }
