--- a/arkki_homepage/src/components/SquadBuilder/Formation/Formation.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/Formation/Formation.style.scss
@@ -24,8 +24,6 @@
     background-size: cover;
     border-radius: 0.25em;
     margin: 0;
-    height: 160px;
-    width: 120px;
 }
 
 @media (max-width: 768px) {
@@ -43,13 +41,23 @@
     }
 }
 
-@media (min-width: 1280px) {
+@media (max-width: 1580px) {
     .Formation__line {
         margin: 1rem 4rem 0.1rem 0rem;
     }
     .player {
         height: 180px;
         width: 140px;
+    }
+}
+
+@media (min-width: 1580px) {
+    .Formation__line {
+        margin: 1rem 4rem 0.1rem 0rem;
+    }
+    .player {
+        height: 260px;
+        width: 220px;
     }
 }
 
@@ -149,7 +157,7 @@
     }
 }
 
-@media (min-width: 1280px) {
+@media (max-width: 1580px) {
     .player .lastName {
         top: 65px;
         font-size: 13px;
@@ -174,6 +182,34 @@
         height: 110px;
         border-radius: 200%;
         margin-top: -20px;
+    }
+
+    @media (min-width: 1580px) {
+        .player .lastName {
+            top: 0px;
+            font-size: 2px;
+            font-weight: 700;
+        }
+    
+        .player .firstName {
+            top: 49px;
+            left: 67px;
+            font-size: 10px;
+            font-weight: 700;
+        }
+    
+        .player .playerNumber {
+            margin-right: 20px;
+            margin-top: -38px;
+            font-size: 26px;
+        }
+    
+        .player .playerImg {
+            width: 90px;
+            height: 110px;
+            border-radius: 200%;
+            margin-top: -20px;
+        }
     }
 }
 
