--- a/arkki_homepage/src/components/AboutUs/AboutUs.style.scss
+++ b/arkki_homepage/src/components/AboutUs/AboutUs.style.scss
@@ -41,7 +41,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  padding: 1rem;
+  padding: 2rem;
   cursor: pointer;
   transition: background-color 100ms ease-in-out;
 }
@@ -114,6 +114,104 @@
   text-decoration: none;
   color: black;
   z-index: 100;
+}
+
+div.arrow--left {
+	width: 2vmin;
+	height: 2vmin;
+	box-sizing: border-box;
+	position: absolute;
+	right: 50%;
+	top: 50%;
+	transform: rotate(-135deg);
+	
+	&::before {
+		content: '';
+		width: 100%;
+		height: 100%;
+		border-width: .2vmin .2vmin 0 0;
+		border-style: solid;
+		border-color: #fafafa;
+		transition: .2s ease;
+		display: block;
+		transform-origin: 100% 0;
+	}
+
+	
+	&:after {
+		content: '';
+		float: left;
+        position: relative;
+        top: -100%;
+		width: 100%;
+		height: 100%;
+		border-width: 0 0.2vmin 0 0;
+		border-style: solid;
+		border-color: #fafafa;
+		transform-origin: 100% 0;
+		transition:.2s ease;
+	}
+	
+	&:hover::after {
+		transform: rotate(45deg);
+		border-color: #5f0c9e;
+		height: 120%;
+	}
+	&:hover::before {
+		border-color: #5f0c9e;
+		transform: scale(0.8);
+		
+	}
+	
+}
+
+div.arrow--right {
+	width: 2vmin;
+	height: 2vmin;
+	box-sizing: border-box;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: rotate(45deg);
+	
+	&::before {
+		content: '';
+		width: 100%;
+		height: 100%;
+		border-width: .2vmin .2vmin 0 0;
+		border-style: solid;
+		border-color: #fafafa;
+		transition: .2s ease;
+		display: block;
+		transform-origin: 100% 0;
+	}
+
+	
+	&:after {
+		content: '';
+		float: left;
+        position: relative;
+        top: -100%;
+		width: 100%;
+		height: 100%;
+		border-width: 0 0.2vmin 0 0;
+		border-style: solid;
+		border-color: #fafafa;
+		transform-origin: 100% 0;
+		transition:.2s ease;
+	}
+	
+	&:hover::after {
+		transform: rotate(45deg);
+		border-color: #5f0c9e;
+		height: 120%;
+	}
+	&:hover::before {
+		border-color: #5f0c9e;
+		transform: scale(0.8);
+		
+	}
+	
 }
 
 @media not (prefers-reduced-motion) {
