placeholder subs and res, tabs navigation about us, tiny tweaks in css

--- a/arkki_homepage/src/components/AboutUs/AboutUs.style.scss
+++ b/arkki_homepage/src/components/AboutUs/AboutUs.style.scss
@@ -2,7 +2,7 @@
 .about__container {
     max-width: 1500px;
     margin: 1rem auto;
-    width: 100%;
+    width: 98%;
     aspect-ratio: 5 / 3;
 }
 
@@ -227,7 +227,7 @@ div.arrow--right {
 
 
 /**** MISSION PARAGRAPHS ****/
-.about__mission {
+.AboutUs{
     display: flex;
     flex-direction: column;
     justify-content: center;
