test changes, reset before if needed

--- a/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
@@ -1,3 +1,63 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    padding: 1rem;
+    background-color: #e2e2e2;
+    padding: 0;
+    margin: 0;
+}
+
+.formation-drdwn {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    background-color: #efefef;
+    border: 1px solid #A2A2A2;
+    align-content: center;
+    justify-content: center;
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+    height: 80%;
+    grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1.5fr;
+}
+
+.subs {
+    grid-area: 1 / 1 / 5 / 2;
+    order: 1;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #FF0000;
+}
+
+.starting {
+    grid-area: 1 / 2 / 5 / 6;
+    order: 3;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #80FF00;
+}
+
+.reserves {
+    grid-area: 5 / 1 / 7 / 7;
+    order: 3;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #0066FF;
+}
+
+// *** OLD *** //
+
 .SBContainer {
     display: flex;
     flex-direction: column;
