--- a/arkki_homepage/src/components/SquadBuilder/Formation/Formation.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/Formation/Formation.style.scss
@@ -9,207 +9,228 @@
 .Formation__line {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    margin: 0.1rem 0.1rem 0.1rem 0rem;
+    margin: 0px;
     width: 100%;
+}
+
+.slot {
+    border: 1px dotted rgb(98, 0, 118, 0.5);
+    border-radius: 20px;
 }
 
 .player {
     display: flex;
+    flex-wrap: nowrap;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    position: relative;
     background-image: url(../../../assets/card.png);
-    background-size: cover;
-    border-radius: 0.25em;
-    margin: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 180px;
+    width: 130px;
+    padding: 20px;
+    margin: 0px;
 }
 
-.player .lastName {
+.playerNumber {
     position: relative;
-    font-family: 'Righteous', sans-serif;
-    top: 55px;
-    font-size: 12px;
-    font-weight: 700;
-    left: 2px;
-    color: #965300;
-}
-
-.player .playerImg {
-    position: absolute;
-    filter: grayscale(100%);
-    width: 80px;
-    height: 100px;
-    border-radius: 50%;
-    margin-top: -20px;
-}
-
-.player .firstName {
-    position: relative;
-    align-self: flex-start;
-    font-family: 'Righteous', sans-serif;
-    top: 38px;
-    left: 59px;
-    font-size: 8px;
-    font-weight: 700;
-    color: #965300;
-}
-
-.player .playerNumber {
+    display: block;
     align-self: flex-end;
     font-family: 'Righteous', sans-serif;
-    margin-right: 18px;
-    margin-top: -34px;
-    font-size: 21px;
+    font-size: 25px;
     font-weight: 700;
     color: #965300;
+}
+
+
+.playerImg {
+    display: block;
+    position: relative;
+    filter: grayscale(100%);
+    border-radius: 50%;
+    margin-top: -25px;
+    height: 100px;
+    width: 80px;
+}
+
+.lastName {
+    display: block;
+    position: relative;
+    font-family: 'Righteous', sans-serif;
+    color: #965300;
+    font-size: 14px;
+    margin-top: -8px;
+}
+
+.firstName {
+    position: relative;
+    display: block;
+    align-self: flex-start;
+    font-family: 'Righteous', sans-serif;
+    font-weight: 700;
+    color: #965300;
+    font-size: 10px;
+    margin-top: -15px;
+    margin-left: 40px;
 }
 
 .Formation__line--vertical {
     display: grid;
-    position: absolute;
+    position: relative;
     left: 0;
     grid-template-columns: repeat(2, 1fr); /* Two columns */
-    gap: 0rem; /* Adjust gap as needed */
-    justify-content: center;
-    align-items: center;
-    margin: 0rem 0; /* Adjust margins as needed */
+    gap: 0rem;
+    margin: 0rem 0;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-@media (min-width: 1680px) {
-    .Formation__line {
-        margin: 0.5rem 2rem 0.1rem 0rem;
-    }
+.reserve__line {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(6, 1fr);
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+@media (max-width: 1201px) {
     .player {
-        height: 220px;
-        width: 160px;
+        height: 170px;
+        width: 120px;
+        padding: 20px;
+        margin: 0px;
     }
-    .player .lastName {
-        top: 70px;
-        font-size: 18px;
-        font-weight: 700;
+    .playerNumber {
+        font-size: 20px;
     }
-    .player .firstName {
-        top: 40px;
-        left: 76px;
-        font-size: 14px;
-        font-weight: 700;
+    .playerImg {
+        margin-top: -25px;
+        height: 100px;
+        width: 80px;
     }
-    .player .playerNumber {
-        margin-right: 22px;
-        margin-top: -40px;
-        font-size: 32px;
+    .lastName {
+        font-size: 13px;
+        margin-top: -8px;
     }
-    .player .playerImg {
-        width: 100px;
-        height: 140px;
-        border-radius: 200%;
+    .firstName {
+        font-size: 9px;
+        margin-top: -15px;
+        margin-left: 35px;
+    }
+}
+
+@media (max-width: 1025px) {
+    .player {
+        height: 150px;
+        width: 110px;
+        padding: 18px;
+        margin: 0px;
+    }
+    .playerNumber {
+        font-size: 20px;
+    }
+    .playerImg {
+        margin-top: -25px;
+        height: 90px;
+        width: 70px;
+    }
+    .lastName {
+        font-size: 12px;
         margin-top: -10px;
     }
-}
-
-@media (max-width: 1680px) {
-    .Formation__line {
-        margin: 0.5rem 0.5rem 0.1rem 0rem;
-    }
-    .player {
-        height: 180px;
-        width: 140px;
-    }
-    .player .lastName {
-        top: 65px;
-        font-size: 13px;
-        font-weight: 700;
-    }
-    .player .firstName {
-        top: 49px;
-        left: 67px;
-        font-size: 10px;
-        font-weight: 700;
-    }
-    .player .playerNumber {
-        margin-right: 20px;
-        margin-top: -38px;
-        font-size: 26px;
-    }
-    .player .playerImg {
-        width: 90px;
-        height: 110px;
-        border-radius: 200%;
-        margin-top: -20px;
+    .firstName {
+        font-size: 9px;
+        margin-top: -13px;
+        margin-left: 30px;
     }
 }
 
 @media (max-width: 768px) {
-    .Formation__line {
-        margin: 0.1rem 0.1rem 0.1rem 0rem;
-    }
     .player {
-        height: 140px;
-        width: 100px;
+        height: 120px;
+        width: 90px;
+        padding: 16px;
+        margin: 0px;
     }
-    .player .lastName {
-        top: 45px;
+    .playerNumber {
+        margin-top: -4px;
+        font-size: 18px;
+    }
+    .playerImg {
+        margin-top: -20px;
+        height: 70px;
+        width: 55px;
+    }
+    .lastName {
         font-size: 9px;
-        font-weight: 700;
+        margin-top: -5px;
     }
-    .player .firstName {
-        top: 32px;
-        left: 48px;
-        font-size: 8px;
-        font-weight: 700;
-    }
-    .player .playerNumber {
-        margin-right: 14px;
-        margin-top: -34px;
-        font-size: 19px;
-    }
-    .player .playerImg {
-        width: 62px;
-        height: 80px;
-        border-radius: 200%;
-        margin-top: -15px;
-    }
-    .Formation__line--vertical {
-        gap: 0.2rem;
-        transform: scale(0.9);
+    .firstName {
+        font-size: 7px;
+        margin-top: -10px;
+        margin-left: 25px;
     }
 }
 
-@media (max-width: 560px) {
-    .Formation__line {
-        margin: 0.1rem 0.1rem 0.1rem 0rem;
-    }
+@media (max-width: 670px) {
     .player {
-        height: 120px;
-        width: 80px;
+        height: 90px;
+        width: 70px;
+        padding: 14px;
+        margin: 0px;
     }
-    .player .lastName {
-        top: 37px;
-        font-size: 8px;
-        font-weight: 700;
+    .playerNumber {
+        margin-top: -4px;
+        font-size: 14px;
     }
-    .player .firstName {
-        top: 24px;
-        left: 41px;
-        font-size: 7px;
-        font-weight: 700;
+    .playerImg {
+        margin-top: -15px;
+        height: 50px;
+        width: 40px;
     }
-    .player .playerNumber {
-        margin-right: 9px;
-        margin-top: -30px;
-        font-size: 17px;
+    .lastName {
+        font-size: 6px;
+        margin-top: -4px;
     }
-    .player .playerImg {
-        width: 45px;
-        height: 60px;
-        border-radius: 200%;
-        margin-top: -20px;
+    .firstName {
+        font-size: 5px;
+        margin-top: -6px;
+        margin-left: 15px;
     }
-    .Formation__line--vertical {
-        gap: 0.1rem;
-        transform: scale(0.75);
+}
+
+@media (max-width: 480px) {
+    .player {
+        height: 80px;
+        width: 64px;
+        padding: 14px;
+        margin: 0px;
+    }
+    .playerNumber {
+        margin-top: -5px;
+        font-size: 12px;
+    }
+    .playerImg {
+        margin-top: -15px;
+        margin-left: -5px;
+        height: 45px;
+        width: 35px;
+    }
+    .lastName {
+        font-size: 5px;
+        margin-top: -1px;
+    }
+    .firstName {
+        font-size: 4px;
+        margin-top: -6px;
+        margin-left: 11px;
     }
 }
