--- a/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
@@ -92,7 +92,7 @@
     font-family: "Roboto";
     padding: 0.5rem 1rem;
     cursor: pointer;
-    width: 10%;
+    width: 200px;
     text-align: center;
 }
 
@@ -108,7 +108,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    width: 10%;
+    width: 200px;
     z-index: 1000;
 }
 
