--- a/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
@@ -21,28 +21,47 @@
     height: 100%;
     grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1.5fr;
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
+
+    @media screen and (orientation: landscape) {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
 }
 
 .subs {
     grid-area: 1 / 1 / 5 / 2;
     order: 1;
-    display: grid;
+    display: flex;
+    position: relative;
+    flex-direction: row;
     width: 100%;
     height: 100%;
     margin: 0;
     border-right: 1px solid #676767;
+
+    @media screen and (orientation: landscape) {
+        grid-area: 1 / 1 / 2 / 2;
+        display: flex;
+        flex-wrap: nowrap;
+    }
 }
 
 .starting {
-    grid-area: 1 / 2 / 5 / 7;
+    grid-area: 1 / 2 / 5 / 6;
     order: 2;
+    background-image: url(../../assets/pitch-bg2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     margin: 0;
+    @media screen and (orientation: landscape) {
+        grid-area: 1 / 2 / 2 / 5;
+    }
 }
 
 .reserves {
@@ -51,10 +70,22 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    position: relative;
     width: 100%;
     height: 100%;
     border-top: 1px solid #676767;
     margin: 0;
+
+    @media screen and (orientation: landscape) {
+        grid-area: 1 / 5 / 2 / 6;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-left: 1px solid #676767;
+    }
 }
 
 // *** OLD *** //
